2007-07-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Fix bug in saving/restoring LDFLAGS around the
	DirextX DirectInput tests.

2007-06-30  Martin Nordholts  <martinn@svn.gnome.org>

	Started taking GimpRectangleTool towards the new specification.
	The side handles now have the same width and height as the
	corresponding corner handles, and the size of the side handles do
	not span across the whole rectangle. Side handles also have a
	limited mimimum size, just as corner handles.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_oper_update,
	gimp_rectangle_tool_draw, gimp_rectangle_tool_configure,
	gimp_rectangle_tool_get_anchor): Changed accordingly.

	* app/tools/gimpdrawtool.c (gimp_draw_tool_draw_corner): Changed
	accordingly.

2007-06-29  Martin Nordholts  <martinn@svn.gnome.org>

	Made GimpRectangleTools remember where the "other side" is when
	fixed-center is turned on, and reset the "other side" to that position
	when fixed-center is turned off again. Fixes bug #398183.

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_button_press): Remember "other side".
	(gimp_rectangle_tool_active_modifier_key): When fixed-center is turned
	off, reset "other side".
	(gimp_rectangle_tool_get_other_side)
	(gimp_rectangle_tool_get_other_side_coord)
	(gimp_rectangle_tool_set_other_side_coord): New functions.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/metadata/xmp-encode.c
	* plug-ins/metadata/xmp-model.c: don't include gimpui.h.

	* plug-ins/metadata/Makefile.am: don't build interface.c, don't
	link with libgimpui and libgimpwidgets.

	* plug-ins/metadata/metadata.c: don't register the metadata editor.

2007-06-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpimagecommenteditor.[ch]: fixed spelling error.

	* app/widgets/gimpcolorpanel.[ch]: applied slightly modified patch
	from Tor Lillqvist that changes the ColorPanel to provide live
	updates (bug #451568).

2007-06-27  Sven Neumann  <sven@gimp.org>
